--- a/bib_files/bibliography.bib
+++ b/bib_files/bibliography.bib
@@ -2210,21 +2210,23 @@
   numpages 	 = {14},
   volume 	 = {87},
 }
+
 @Article{Carvalho2015,
-  volume 	 = {114},
-  numpages 	 = {5},
-  journal 	 = {Phys. Rev. Lett.},
-  title 	 = {Symmetry-Dependent Exciton-Phonon Coupling in 2D and Bulk $\mathrmMoS_2$ Observed by Resonance Raman Scattering},
-  groups 	 = {Coherent Phonon Modes, Coherent Oscillations},
-  author 	 = {Carvalho, Bruno R. and Malard, Leandro M. and Alves, Juliana M. and Fantini, Cristiano and Pimenta, Marcos A.},
-  doi 	 = {10.1103/PhysRevLett.114.136403},
-  year 	 = {2015},
-  publisher 	 = {American Physical Society},
-  issue 	 = {13},
-  url 	 = {https://link.aps.org/doi/10.1103/PhysRevLett.114.136403},
-  file 	 = {:/home/marini/Papers_and_Results/DATABASE/PhysRevLett.114.136403.pdf:PDF},
-  month 	 = {Apr},
-  pages 	 = {136403},
+  author    = {Carvalho, Bruno R. and Malard, Leandro M. and Alves, Juliana M. and Fantini, Cristiano and Pimenta, Marcos A.},
+  title     = {Symmetry-Dependent Exciton-Phonon Coupling in 2D and Bulk $\mathrmMoS_2$ Observed by Resonance Raman Scattering},
+  journal   = {Phys. Rev. Lett.},
+  year      = {2015},
+  volume    = {114},
+  pages     = {136403},
+  month     = {Apr},
+  doi       = {10.1103/PhysRevLett.114.136403},
+  file      = {:/home/marini/Papers_and_Results/DATABASE/PhysRevLett.114.136403.pdf:PDF},
+  groups    = {Coherent Oscillations},
+  issue     = {13},
+  numpages  = {5},
+  publisher = {American Physical Society},
+  timestamp = {2018.09.28},
+  url       = {https://link.aps.org/doi/10.1103/PhysRevLett.114.136403},
 }
 @Article{Casida2005,
   author 	 = {Casida, ME},
@@ -2380,20 +2382,22 @@
   pages 	 = {035106},
   month 	 = {Jul},
 }
+
 @Article{Chang2000,
-  abstract 	 = {The general theory and experimental considerations are presented for a novel all-optical time-domain technique for measuring low frequency vibrational modes of surfaces (phonons or adsorbate vibrational modes). A pump-laser pulse impulsively drives an initial displacement of the surface atoms. The subsequent free-induction decay of the coherent phonon modes of the surface atoms is detected by time-resolved second-harmonic generation (SHG). The spectral features are recovered by fitting the time-domain data to exponentially decaying sinusoids. This all-optical probe has advantages over inelastic particle scattering techniques because it can be applied at buried interfaces. It has signal to noise advantages over linear and spontaneous Raman techniques. This technique is demonstrated by measurement of surface optical phonon spectra on the clean GaAs (110)–relaxed–(1×1), GaAs (100)–(1×6), and GaAs (100)–(4×1) in UHV and of a local monolayer-scale interfacial mode at the buried native-oxide-covered GaAs (100). The chemical sensitivity is demonstrated by in situ oxidation of the GaAs (100)–(4×6). The general mechanism of generating coherent surface phonons is discussed in light of the symmetry selection rules.},
-  journal 	 = {Chemical Physics},
-  volume 	 = {251},
-  year 	 = {2000},
-  file 	 = {:/home/marini/Papers_and_Results/DATABASE/1-s2.0-S0301010499003067-main.pdf:PDF},
-  url 	 = {http://www.sciencedirect.com/science/article/pii/S0301010499003067},
-  title 	 = {Coherent phonon spectroscopy of GaAs surfaces using time-resolved second-harmonic generation},
-  groups 	 = {Coherent Phonon Modes, Coherent Oscillations},
-  issn 	 = {0301-0104},
-  author 	 = {Yu-Ming Chang and Li Xu and Harry W.K. Tom},
-  number 	 = {1},
-  pages 	 = {283 - 308},
-  doi 	 = {https://doi.org/10.1016/S0301-0104(99)00306-7},
+  author    = {Yu-Ming Chang and Li Xu and Harry W.K. Tom},
+  title     = {Coherent phonon spectroscopy of GaAs surfaces using time-resolved second-harmonic generation},
+  journal   = {Chemical Physics},
+  year      = {2000},
+  volume    = {251},
+  number    = {1},
+  pages     = {283 - 308},
+  issn      = {0301-0104},
+  abstract  = {The general theory and experimental considerations are presented for a novel all-optical time-domain technique for measuring low frequency vibrational modes of surfaces (phonons or adsorbate vibrational modes). A pump-laser pulse impulsively drives an initial displacement of the surface atoms. The subsequent free-induction decay of the coherent phonon modes of the surface atoms is detected by time-resolved second-harmonic generation (SHG). The spectral features are recovered by fitting the time-domain data to exponentially decaying sinusoids. This all-optical probe has advantages over inelastic particle scattering techniques because it can be applied at buried interfaces. It has signal to noise advantages over linear and spontaneous Raman techniques. This technique is demonstrated by measurement of surface optical phonon spectra on the clean GaAs (110)–relaxed–(1×1), GaAs (100)–(1×6), and GaAs (100)–(4×1) in UHV and of a local monolayer-scale interfacial mode at the buried native-oxide-covered GaAs (100). The chemical sensitivity is demonstrated by in situ oxidation of the GaAs (100)–(4×6). The general mechanism of generating coherent surface phonons is discussed in light of the symmetry selection rules.},
+  doi       = {https://doi.org/10.1016/S0301-0104(99)00306-7},
+  file      = {:/home/marini/Papers_and_Results/DATABASE/1-s2.0-S0301010499003067-main.pdf:PDF},
+  groups    = {Coherent Oscillations},
+  timestamp = {2018.09.28},
+  url       = {http://www.sciencedirect.com/science/article/pii/S0301010499003067},
 }
 @Article{Charlier2007,
   author 	 = {Charlier, Jean-Christophe and Blase, Xavier and Roche, Stephan},
@@ -5730,20 +5734,23 @@
   year 	 = {2002},
   numpages 	 = {13},
 }
+
 @InBook{Ishioka2010,
-  Pages 	 = {23--46},
-  ISBN 	 = {978-3-642-03825-9},
-  File 	 = {:PAPERS/Coherent Lattice Oscillations in Solids and their control.pdf:PDF},
-  Doi 	 = {10.1007/978-3-642-03825-9_2},
-  Abstract 	 = {Coherent optical phonons are the lattice atoms vibrating in phase with each other over a macroscopic spatial region. With sub-10\thinspacefs laser pulses, one can impulsively excite the coherent phonons of a frequency up to 50\thinspaceTHz, and detect them optically as a periodic modulation of electric susceptibility. The generation and relaxation processes depend critically on the coupling of the phonon mode to photoexcited electrons. Real-time observation of coherent phonons can thus offer crucial insight into the dynamic nature of the coupling, especially in extremely nonequilibrium conditions under intense photoexcitation.},
-  Editor 	 = {Yamanouchi, Kaoru and Giulietti, Antonio and Ledingham, Kenneth},
-  Title 	 = {Coherent Lattice Oscillations in Solids and Their Optical Control},
-  Author 	 = {Ishioka, Kunie and Misochko, Oleg V.},
-  Url 	 = {https://doi.org/10.1007/978-3-642-03825-9_2},
-  Year 	 = {2010},
-  Publisher 	 = {Springer Berlin Heidelberg},
-  Booktitle 	 = {Progress in Ultrafast Intense Laser Science: Volume V},
-  Address 	 = {Berlin, Heidelberg},
+  pages     = {23--46},
+  title     = {Coherent Lattice Oscillations in Solids and Their Optical Control},
+  publisher = {Springer Berlin Heidelberg},
+  year      = {2010},
+  author    = {Ishioka, Kunie and Misochko, Oleg V.},
+  editor    = {Yamanouchi, Kaoru and Giulietti, Antonio and Ledingham, Kenneth},
+  address   = {Berlin, Heidelberg},
+  isbn      = {978-3-642-03825-9},
+  abstract  = {Coherent optical phonons are the lattice atoms vibrating in phase with each other over a macroscopic spatial region. With sub-10\thinspacefs laser pulses, one can impulsively excite the coherent phonons of a frequency up to 50\thinspaceTHz, and detect them optically as a periodic modulation of electric susceptibility. The generation and relaxation processes depend critically on the coupling of the phonon mode to photoexcited electrons. Real-time observation of coherent phonons can thus offer crucial insight into the dynamic nature of the coupling, especially in extremely nonequilibrium conditions under intense photoexcitation.},
+  booktitle = {Progress in Ultrafast Intense Laser Science: Volume V},
+  doi       = {10.1007/978-3-642-03825-9_2},
+  file      = {::/home/marini/Papers_and_Results/DATABASE/Coherent Lattice Oscillations in Solids and their control.pdf:PDF},
+  groups    = {Coherent Oscillations},
+  timestamp = {2018.09.28},
+  url       = {https://doi.org/10.1007/978-3-642-03825-9_2},
 }
 @Article{J.H.Burroughes1990,
   groups 	 = {Polymers, Time-Resolved Phenomena},
@@ -6917,21 +6924,23 @@
   number 	 = {16},
   pages 	 = {8721--8744},
 }
+
 @Article{Kuznetsov1994,
-  doi 	 = {10.1103/PhysRevLett.73.3243},
-  author 	 = {Kuznetsov, A. V. and Stanton, C. J.},
-  groups 	 = {Coherent Phonon Modes, Coherent Oscillations},
-  title 	 = {Theory of Coherent Phonon Oscillations in Semiconductors},
-  numpages 	 = {0},
-  volume 	 = {73},
-  journal 	 = {Phys. Rev. Lett.},
-  month 	 = {Dec},
-  pages 	 = {3243--3246},
-  publisher 	 = {American Physical Society},
-  file 	 = {:/home/marini/Papers_and_Results/DATABASE/PhysRevLett.73.3243.pdf:PDF},
-  url 	 = {https://link.aps.org/doi/10.1103/PhysRevLett.73.3243},
-  issue 	 = {24},
-  year 	 = {1994},
+  author    = {Kuznetsov, A. V. and Stanton, C. J.},
+  title     = {Theory of Coherent Phonon Oscillations in Semiconductors},
+  journal   = {Phys. Rev. Lett.},
+  year      = {1994},
+  volume    = {73},
+  pages     = {3243--3246},
+  month     = {Dec},
+  doi       = {10.1103/PhysRevLett.73.3243},
+  file      = {:/home/marini/Papers_and_Results/DATABASE/PhysRevLett.73.3243.pdf:PDF},
+  groups    = {Coherent Oscillations},
+  issue     = {24},
+  numpages  = {0},
+  publisher = {American Physical Society},
+  timestamp = {2018.09.28},
+  url       = {https://link.aps.org/doi/10.1103/PhysRevLett.73.3243},
 }
 @Article{L.Banyai1992,
   pages 	 = {149},
@@ -7273,19 +7282,21 @@
   pages 	 = {707--713},
   issn 	 = {1521-3951},
 }
+
 @Article{Lee2015,
-  url 	 = {http://dx.doi.org/10.1039/C4NR05785F},
-  issue 	 = {7},
-  title 	 = {Anomalous excitonic resonance Raman effects in few-layered MoS2},
-  publisher 	 = {The Royal Society of Chemistry},
-  journal 	 = {Nanoscale},
-  abstract 	 = {The resonance effects on the Raman spectra from 5 to 900 cm-1 of few-layered MoS2 thin films up to 14-layers were investigated by using six excitation energies. For the main first-order Raman peaks, the intensity maximum occurs at [similar]2.8 eV for single layered and at [similar]2.5 eV for few-layered MoS2, which correspond to the band-gap energy. At the excitation energy of 1.96 eV, several anomalous behaviors are observed. Many second-order peaks are anomalously enhanced even though the main first-order peaks are not enhanced. In the low-frequency region (<100 cm-1), a broad peak centered at [similar]38 cm-1 and its second order peak at 76 cm-1 appear for the excitation energy of 1.96 eV. These anomalous resonance effects are interpreted as occuring due to the strong resonance with excitons or exciton-polaritons.},
-  year 	 = {2015},
-  volume 	 = {7},
-  pages 	 = {3229-3236},
-  doi 	 = {10.1039/C4NR05785F},
-  author 	 = {Lee, Jae-Ung and Park, Jaesung and Son, Young-Woo and Cheong, Hyeonsik},
-  groups 	 = {Coherent Phonon Modes, Coherent Oscillations},
+  author    = {Lee, Jae-Ung and Park, Jaesung and Son, Young-Woo and Cheong, Hyeonsik},
+  title     = {Anomalous excitonic resonance Raman effects in few-layered MoS2},
+  journal   = {Nanoscale},
+  year      = {2015},
+  volume    = {7},
+  pages     = {3229-3236},
+  abstract  = {The resonance effects on the Raman spectra from 5 to 900 cm-1 of few-layered MoS2 thin films up to 14-layers were investigated by using six excitation energies. For the main first-order Raman peaks, the intensity maximum occurs at [similar]2.8 eV for single layered and at [similar]2.5 eV for few-layered MoS2, which correspond to the band-gap energy. At the excitation energy of 1.96 eV, several anomalous behaviors are observed. Many second-order peaks are anomalously enhanced even though the main first-order peaks are not enhanced. In the low-frequency region (<100 cm-1), a broad peak centered at [similar]38 cm-1 and its second order peak at 76 cm-1 appear for the excitation energy of 1.96 eV. These anomalous resonance effects are interpreted as occuring due to the strong resonance with excitons or exciton-polaritons.},
+  doi       = {10.1039/C4NR05785F},
+  groups    = {Coherent Oscillations},
+  issue     = {7},
+  publisher = {The Royal Society of Chemistry},
+  timestamp = {2018.09.28},
+  url       = {http://dx.doi.org/10.1039/C4NR05785F},
 }
 @Article{Lee1979,
   title 	 = {Time‐dependent theory of Raman scattering},
@@ -7805,22 +7816,24 @@
   numpages 	 = {10},
   journal 	 = {Phys. Rev. B},
 }
+
 @Article{Lozovik2003,
-  volume 	 = {45},
-  journal 	 = {Physics of the Solid State},
-  title 	 = {Excitation of coherent acoustic phonons by a femtosecond pulse},
-  day 	 = {01},
-  groups 	 = {Coherent Phonon Modes, Coherent Oscillations},
-  author 	 = {Lozovik, Yu. E. and Sharapov, V. A.},
-  doi 	 = {10.1134/1.1575346},
-  number 	 = {5},
-  year 	 = {2003},
-  abstract 	 = {Excitation of coherent acoustic phonons in superlattices or layered materials by a femtosecond pulse is considered. In superlattices, coherent acoustic phonons with a wave vector Q},
-  url 	 = {https://doi.org/10.1134/1.1575346},
-  file 	 = {:/home/marini/Papers_and_Results/DATABASE/10.11342F1.1575346.pdf:PDF},
-  issn 	 = {1090-6460},
-  month 	 = {May},
-  pages 	 = {969--971},
+  author    = {Lozovik, Yu. E. and Sharapov, V. A.},
+  title     = {Excitation of coherent acoustic phonons by a femtosecond pulse},
+  journal   = {Physics of the Solid State},
+  year      = {2003},
+  volume    = {45},
+  number    = {5},
+  pages     = {969--971},
+  month     = {May},
+  issn      = {1090-6460},
+  abstract  = {Excitation of coherent acoustic phonons in superlattices or layered materials by a femtosecond pulse is considered. In superlattices, coherent acoustic phonons with a wave vector Q},
+  day       = {01},
+  doi       = {10.1134/1.1575346},
+  file      = {:/home/marini/Papers_and_Results/DATABASE/10.11342F1.1575346.pdf:PDF},
+  groups    = {Coherent Oscillations},
+  timestamp = {2018.09.28},
+  url       = {https://doi.org/10.1134/1.1575346},
 }
 @Article{PhysRevLett.74.1123,
   file 	 = {:/home/marini/Papers_and_Results/DATABASE/PhysRevLett.74.1123.pdf:PDF},
@@ -8601,19 +8614,21 @@
   author 	 = {R. M. Martin},
   groups 	 = {DFPT, Time-Resolved Phenomena},
 }
+
 @Article{Matsumoto2006,
-  title 	 = {Coherent Vibrations of Adsorbates Induced by Femtosecond Laser Excitation},
-  file 	 = {:/home/marini/Papers_and_Results/DATABASE/cr050165w.pdf:PDF},
-  url 	 = {https://doi.org/10.1021/cr050165w},
-  year 	 = {2006},
-  volume 	 = {106},
-  note 	 = {PMID: 17031985},
-  journal 	 = {Chemical Reviews},
-  doi 	 = {10.1021/cr050165w},
-  pages 	 = {4234-4260},
-  number 	 = {10},
-  author 	 = {Matsumoto, Yoshiyasu and Watanabe, Kazuya},
-  groups 	 = {Coherent Phonon Modes},
+  author    = {Matsumoto, Yoshiyasu and Watanabe, Kazuya},
+  title     = {Coherent Vibrations of Adsorbates Induced by Femtosecond Laser Excitation},
+  journal   = {Chemical Reviews},
+  year      = {2006},
+  volume    = {106},
+  number    = {10},
+  pages     = {4234-4260},
+  note      = {PMID: 17031985},
+  doi       = {10.1021/cr050165w},
+  file      = {:/home/marini/Papers_and_Results/DATABASE/cr050165w.pdf:PDF},
+  groups    = {Coherent Oscillations},
+  timestamp = {2018.09.28},
+  url       = {https://doi.org/10.1021/cr050165w},
 }
 @Article{Matsunaga2011,
   author 	 = {Matsunaga, Ryusuke and Matsuda, Kazunari and Kanemitsu, Yoshihiko},
@@ -8820,21 +8835,23 @@
   author 	 = {Pedro Miguel M. C. de Melo and Andrea Marini},
   groups 	 = {Lamb},
 }
+
 @Article{Merlin1997,
-  issn 	 = {0038-1098},
-  pages 	 = {207 - 220},
-  abstract 	 = {We present an overview of experimental work and discuss the theory of femtosecond-pulse generation of coherent optical phonons. Recent developments and differences between solids and molecular systems are emphasized. Theoretically, we focus on Raman mechanisms for the coherent driving force providing a comprehensive approach for the description of both below-gap and resonant excitation. The survey covers also polaritons and folded acoustic phonons in superlattices as well as a comparison with spontaneous Raman scattering.},
-  year 	 = {1997},
-  url 	 = {http://www.sciencedirect.com/science/article/pii/S0038109896007211},
-  file 	 = {:/home/marini/Papers_and_Results/DATABASE/1-s2.0-S0038109896007211-main.pdf:PDF},
-  groups 	 = {Coherent Phonon Modes, Coherent Oscillations},
-  author 	 = {R. Merlin},
-  number 	 = {2},
-  doi 	 = {https://doi.org/10.1016/S0038-1098(96)00721-1},
-  note 	 = {Highlights in Condensed Matter Physics and Materials Science},
-  journal 	 = {Solid State Communications},
-  volume 	 = {102},
-  title 	 = {Generating coherent THz phonons with light pulses},
+  author    = {R. Merlin},
+  title     = {Generating coherent THz phonons with light pulses},
+  journal   = {Solid State Communications},
+  year      = {1997},
+  volume    = {102},
+  number    = {2},
+  pages     = {207 - 220},
+  issn      = {0038-1098},
+  note      = {Highlights in Condensed Matter Physics and Materials Science},
+  abstract  = {We present an overview of experimental work and discuss the theory of femtosecond-pulse generation of coherent optical phonons. Recent developments and differences between solids and molecular systems are emphasized. Theoretically, we focus on Raman mechanisms for the coherent driving force providing a comprehensive approach for the description of both below-gap and resonant excitation. The survey covers also polaritons and folded acoustic phonons in superlattices as well as a comparison with spontaneous Raman scattering.},
+  doi       = {https://doi.org/10.1016/S0038-1098(96)00721-1},
+  file      = {:/home/marini/Papers_and_Results/DATABASE/1-s2.0-S0038109896007211-main.pdf:PDF},
+  groups    = {Coherent Oscillations},
+  timestamp = {2018.09.28},
+  url       = {http://www.sciencedirect.com/science/article/pii/S0038109896007211},
 }
 @Article{Mermin1965,
   url 	 = {http://link.aps.org/doi/10.1103/PhysRev.137.A1441},
@@ -9872,21 +9889,23 @@
   author 	 = {Park, Cheol-Hwan Giustino, Feliciano Spataru, Catalin D. Cohen, Marvin L. Louie, Steven G.},
   pages 	 = {4234},
 }
+
 @Article{Park2005,
-  publisher 	 = {American Physical Society},
-  issue 	 = {10},
-  file 	 = {:/home/marini/Papers_and_Results/DATABASE/PhysRevB.72.100301.pdf:PDF},
-  url 	 = {https://link.aps.org/doi/10.1103/PhysRevB.72.100301},
-  year 	 = {2005},
-  month 	 = {Sep},
-  pages 	 = {100301},
-  title 	 = {Mechanism of coherent acoustic phonon generation under nonequilibrium conditions},
-  volume 	 = {72},
-  numpages 	 = {4},
-  journal 	 = {Phys. Rev. B},
-  doi 	 = {10.1103/PhysRevB.72.100301},
-  groups 	 = {Coherent Phonon Modes, Coherent Oscillations},
-  author 	 = {Park, H. and Wang, X. and Nie, S. and Clinite, R. and Cao, J.},
+  author    = {Park, H. and Wang, X. and Nie, S. and Clinite, R. and Cao, J.},
+  title     = {Mechanism of coherent acoustic phonon generation under nonequilibrium conditions},
+  journal   = {Phys. Rev. B},
+  year      = {2005},
+  volume    = {72},
+  pages     = {100301},
+  month     = {Sep},
+  doi       = {10.1103/PhysRevB.72.100301},
+  file      = {:/home/marini/Papers_and_Results/DATABASE/PhysRevB.72.100301.pdf:PDF},
+  groups    = {Coherent Oscillations},
+  issue     = {10},
+  numpages  = {4},
+  publisher = {American Physical Society},
+  timestamp = {2018.09.28},
+  url       = {https://link.aps.org/doi/10.1103/PhysRevB.72.100301},
 }
 @Article{Park1980,
   volume 	 = {73},
@@ -12090,21 +12109,23 @@
   year 	 = {2011},
   abstract 	 = {Abstract, We have investigated the exciton Mott transition in a bulk Si by optical pump and terahertz probe spectroscopy under quasi-thermal equilibrium condition. The 1s-2p transition energy of excitons in Si that locates around 12 meV (?3 THz) is directly probed by the broadband terahertz pulses. The resonance energy of the 1s-2p transition stays unchanged with increasing the photo-excited electron-hole (e-h) pair density. The resonance structure sustains even above the Mott density, although broadened, in contrast to the conventional picture of the exciton Mott transition where the exciton binding energy vanishes toward the Mott density. The results indicate the existence of excitonic correlation in the metallic electron-hole plasma phase (? 2011 WILEY-VCH Verlag GmbH & Co. KGaA, Weinheim)},
 }
+
 @Article{Shinohara2010,
-  numpages 	 = {10},
-  volume 	 = {82},
-  journal 	 = {Phys. Rev. B},
-  title 	 = {Coherent phonon generation in time-dependent density functional theory},
-  author 	 = {Shinohara, Y. and Yabana, K. and Kawashita, Y. and Iwata, J.-I. and Otobe, T. and Bertsch, G. F.},
-  groups 	 = {Coherent Phonon Modes, Coherent Oscillations},
-  doi 	 = {10.1103/PhysRevB.82.155110},
-  year 	 = {2010},
-  publisher 	 = {American Physical Society},
-  url 	 = {https://link.aps.org/doi/10.1103/PhysRevB.82.155110},
-  file 	 = {:/home/marini/Papers_and_Results/DATABASE/PhysRevB.82.155110.pdf:PDF},
-  issue 	 = {15},
-  month 	 = {Oct},
-  pages 	 = {155110},
+  author    = {Shinohara, Y. and Yabana, K. and Kawashita, Y. and Iwata, J.-I. and Otobe, T. and Bertsch, G. F.},
+  title     = {Coherent phonon generation in time-dependent density functional theory},
+  journal   = {Phys. Rev. B},
+  year      = {2010},
+  volume    = {82},
+  pages     = {155110},
+  month     = {Oct},
+  doi       = {10.1103/PhysRevB.82.155110},
+  file      = {:/home/marini/Papers_and_Results/DATABASE/PhysRevB.82.155110.pdf:PDF},
+  groups    = {Coherent Oscillations},
+  issue     = {15},
+  numpages  = {10},
+  publisher = {American Physical Society},
+  timestamp = {2018.09.28},
+  url       = {https://link.aps.org/doi/10.1103/PhysRevB.82.155110},
 }
 @Article{Shishkin2007a,
   pages 	 = {235102},
@@ -13415,18 +13436,20 @@
   year 	 = {2011},
   journal 	 = {Phys. Rev. B},
 }
+
 @Article{Usenko2016,
-  url 	 = {http://stacks.iop.org/1367-2630/18/i},
-  file 	 = {:/home/marini/Papers_and_Results/DATABASE/Usenko_2016_New_J._Phys._18_113055.pdf:PDF},
-  title 	 = {Femtosecond dynamics of correlated many-body states in C 60 fullerenes},
-  journal 	 = {New Journal of Physics},
-  abstract 	 = {Fullerene complexes may play a key role in the design of future molecular electronics and nanostructured devices with potential applications in light harvesting using organic solar cells. Charge and energy flow in these systems is mediated by many-body effects. We studied the structure and dynamics of laser-induced multi-electron excitations in isolated C 60 by two-photon photoionization as a function of excitation wavelength using a tunable fs UV laser and developed a corresponding theoretical framework on the basis of ab initio calculations. The measured resonance line width gives direct information on the excited state lifetime. From the spectral deconvolution we derive a lower limit for purely electronic relaxation on the order of ##IMG## [http://ej.iop.org/images/1367-2630/18/11/113055/njpaa4b57ieqn1.gif] $\tau _\mathrmel},
-  year 	 = {2016},
-  volume 	 = {18},
-  pages 	 = {113055},
-  number 	 = {11},
-  author 	 = {Sergey Usenko and Michael Schüler and Armin Azima and Markus Jakob and Leslie L Lazzarino and Yaroslav Pavlyukh and Andreas , Przystawik and Markus Drescher and Tim Laarmann and Jamal Berakdar},
-  groups 	 = {Femto Chemistry},
+  author    = {Sergey Usenko and Michael Schüler and Armin Azima and Markus Jakob and Leslie L Lazzarino and Yaroslav Pavlyukh and Andreas , Przystawik and Markus Drescher and Tim Laarmann and Jamal Berakdar},
+  title     = {Femtosecond dynamics of correlated many-body states in C 60 fullerenes},
+  journal   = {New Journal of Physics},
+  year      = {2016},
+  volume    = {18},
+  number    = {11},
+  pages     = {113055},
+  abstract  = {Fullerene complexes may play a key role in the design of future molecular electronics and nanostructured devices with potential applications in light harvesting using organic solar cells. Charge and energy flow in these systems is mediated by many-body effects. We studied the structure and dynamics of laser-induced multi-electron excitations in isolated C 60 by two-photon photoionization as a function of excitation wavelength using a tunable fs UV laser and developed a corresponding theoretical framework on the basis of ab initio calculations. The measured resonance line width gives direct information on the excited state lifetime. From the spectral deconvolution we derive a lower limit for purely electronic relaxation on the order of ##IMG## [http://ej.iop.org/images/1367-2630/18/11/113055/njpaa4b57ieqn1.gif] $\tau _\mathrmel},
+  file      = {:/home/marini/Papers_and_Results/DATABASE/Usenko_2016_New_J._Phys._18_113055.pdf:PDF},
+  groups    = {Femto Chemistry, C60},
+  timestamp = {2018.09.28},
+  url       = {http://stacks.iop.org/1367-2630/18/i},
 }
 @Article{Voros2012,
   issue 	 = {26},
@@ -15255,20 +15278,6 @@
   url      = {http://stacks.iop.org/0953-4075/49/i},
 }
 
-@Article{1367-2630-18-11-113055,
-  author   = {Sergey Usenko and Michael Schüler and Armin Azima and Markus Jakob and Leslie L Lazzarino and Yaroslav Pavlyukh and Andreas Przystawik and Markus Drescher and Tim Laarmann and Jamal Berakdar},
-  title    = {Femtosecond dynamics of correlated many-body states in C 60 fullerenes},
-  journal  = {New Journal of Physics},
-  year     = {2016},
-  volume   = {18},
-  number   = {11},
-  pages    = {113055},
-  abstract = {Fullerene complexes may play a key role in the design of future molecular electronics and nanostructured devices with potential applications in light harvesting using organic solar cells. Charge and energy flow in these systems is mediated by many-body effects. We studied the structure and dynamics of laser-induced multi-electron excitations in isolated C 60 by two-photon photoionization as a function of excitation wavelength using a tunable fs UV laser and developed a corresponding theoretical framework on the basis of ab initio calculations. The measured resonance line width gives direct information on the excited state lifetime. From the spectral deconvolution we derive a lower limit for purely electronic relaxation on the order of ##IMG## [http://ej.iop.org/images/1367-2630/18/11/113055/njpaa4b57ieqn1.gif] $\tau _\mathrmel},
-  file     = {:/home/marini/Papers_and_Results/DATABASE/Usenko_2016_New_J._Phys._18_113055.pdf:PDF},
-  groups   = {C60},
-  url      = {http://stacks.iop.org/1367-2630/18/i},
-}
-
 @Unpublished{exc-ph2,
   author    = {Hsiao-Yi Chen and Marco Bernardi},
   title     = {Derivation of the Exciton-Phonon Interaction},
@@ -15278,133 +15287,19 @@
   volume    = {none},
 }
 
-@Comment{jabref-meta: databaseType:bibtex;}
-
-@Comment{jabref-meta: grouping:
-0 AllEntriesGroup:;
-1 StaticGroup:To Read\;0\;1\;\;\;\;;
-1 StaticGroup:Aharonov-Bohm\;0\;0\;\;\;\;;
-2 StaticGroup:Optics\;0\;1\;\;\;\;;
-1 StaticGroup:Atomic dynamics\;0\;1\;\;\;\;;
-1 StaticGroup:Auger\;0\;1\;\;\;\;;
-1 StaticGroup:Books and More ...\;0\;0\;\;\;\;;
-2 StaticGroup:Books\;0\;1\;\;\;\;;
-2 StaticGroup:Notes\;0\;1\;\;\;\;;
-2 StaticGroup:Thesis\;0\;1\;\;\;\;;
-2 StaticGroup:Meetings\;0\;1\;\;\;\;;
-2 StaticGroup:Reviews\;0\;1\;\;\;\;;
-1 StaticGroup:Bose-Einstein Condensation\;0\;1\;\;\;\;;
-1 StaticGroup:Coding\;0\;1\;\;\;\;;
-1 StaticGroup:Double Excitations\;0\;1\;\;\;\;;
-1 StaticGroup:DFT\;0\;0\;\;\;\;;
-2 StaticGroup:Ultrasoft potentials\;0\;1\;\;\;\;;
-2 StaticGroup:SDFT\;0\;1\;\;\;\;;
-1 StaticGroup:Electron-Phonon\;0\;0\;\;\;\;;
-2 StaticGroup:DFPT\;0\;1\;\;\;\;;
-2 StaticGroup:Cardona\;0\;1\;\;\;\;;
-2 StaticGroup:Model Hamiltonians\;0\;1\;\;\;\;;
-2 StaticGroup:Phonons\;0\;1\;\;\;\;;
-2 StaticGroup:Oxides\;0\;1\;\;\;\;;
-2 StaticGroup:Jahn-Teller\;0\;1\;\;\;\;;
-2 StaticGroup:Franck-Condon\;0\;1\;\;\;\;;
-2 StaticGroup:Phonon assisted absorption\;0\;1\;\;\;\;;
-2 StaticGroup:Cumulant\;0\;1\;\;\;\;;
-2 StaticGroup:Coherent Phonon Modes\;0\;1\;\;\;\;;
-2 StaticGroup:Exciton-Phonon\;0\;1\;\;\;\;;
-1 StaticGroup:Hall effect\;0\;1\;\;\;\;;
-1 StaticGroup:Kerr effect\;0\;1\;\;\;\;;
-1 StaticGroup:Linear Optics\;0\;0\;\;\;\;;
-2 StaticGroup:Excitons\;0\;1\;\;\;\;;
-1 StaticGroup:MBPT\;0\;1\;\;\;\;;
-1 StaticGroup:Magnetism & Barry Phase\;0\;1\;\;\;\;;
-1 StaticGroup:Natural Orbitals\;0\;1\;\;\;\;;
-1 StaticGroup:NEGF\;0\;0\;\;\;\;;
-2 StaticGroup:Baym-Kadanoff Eqs\;0\;1\;\;\;\;;
-3 StaticGroup:2 Levels\;0\;1\;\;\;\;;
-3 StaticGroup:ERC\;0\;1\;\;\;\;;
-3 StaticGroup:El-Ph\;0\;1\;\;\;\;;
-3 StaticGroup:BKE with quantized vector potentials\;0\;1\;\;\;\;;
-3 StaticGroup:Strongly Correlated\;0\;1\;\;\;\;;
-2 StaticGroup:Bloch Equations\;0\;1\;\;\;\;;
-2 StaticGroup:Density Matrices\;0\;1\;\;\;\;;
-1 StaticGroup:Non collinear spin\;0\;1\;\;\;\;;
-1 StaticGroup:Photo Luminescence\;0\;0\;\;\;\;;
-2 StaticGroup:Radiative Recombination\;0\;1\;\;\;\;;
-1 StaticGroup:Quasiparticles\;0\;0\;\;\;\;;
-2 StaticGroup:Lifetimes\;0\;1\;\;\;\;;
-2 StaticGroup:GW\;0\;1\;\;\;\;;
-1 StaticGroup:Raman\;0\;1\;\;\;\;;
-1 StaticGroup:Self-Consistency\;0\;1\;\;\;\;;
-1 StaticGroup:SOC\;0\;1\;\;\;\;;
-1 StaticGroup:Specific Materials\;0\;0\;\;\;\;;
-2 StaticGroup:Polymers\;0\;1\;\;\;\;;
-2 StaticGroup:Graphite & Graphene\;0\;1\;\;\;\;;
-3 StaticGroup:ARPES & Polaronic effects\;0\;1\;\;\;\;;
-2 StaticGroup:Surfaces\;0\;1\;\;\;\;;
-2 StaticGroup:Bulks\;0\;1\;\;\;\;;
-2 StaticGroup:Oxides\;0\;1\;\;\;\;;
-2 StaticGroup:MgB2\;0\;1\;\;\;\;;
-2 StaticGroup:GaN\;0\;1\;\;\;\;;
-2 StaticGroup:Diamondoids\;0\;1\;\;\;\;;
-2 StaticGroup:Dichalcogenides\;0\;1\;\;\;\;;
-2 StaticGroup:MgO\;0\;1\;\;\;\;;
-2 StaticGroup:hBN\;0\;1\;\;\;\;;
-2 StaticGroup:Carbon Nanotubes\;0\;1\;\;\;\;;
-2 StaticGroup:Silicon\;0\;1\;\;\;\;;
-2 StaticGroup:Jellium\;0\;1\;\;\;\;;
-2 StaticGroup:GaAs\;0\;1\;\;\;\;;
-2 StaticGroup:ZnO\;0\;1\;\;\;\;;
-2 StaticGroup:NanoTubes\;0\;1\;\;\;\;;
-2 StaticGroup:Polymers\;0\;1\;\;\;\;;
-2 StaticGroup:phenylalanine\;0\;1\;\;\;\;;
-2 StaticGroup:FeRh\;0\;1\;\;\;\;;
-2 StaticGroup:Black Phosporus\;0\;1\;\;\;\;;
-2 StaticGroup:C60\;0\;1\;\;\;\;;
-1 StaticGroup:Strongly correlated\;0\;1\;\;\;\;;
-1 StaticGroup:Superconductivity\;0\;1\;\;\;\;;
-1 StaticGroup:Time-Resolved Phenomena\;0\;0\;\;\;\;;
-2 StaticGroup:Atto Chemistry\;0\;1\;\;\;\;;
-2 StaticGroup:Femto Chemistry\;0\;1\;\;\;\;;
-2 StaticGroup:Absorption under Pump\;0\;1\;\;\;\;;
-3 StaticGroup:SHG\;0\;1\;\;\;\;;
-3 StaticGroup:Gauge\;0\;1\;\;\;\;;
-3 StaticGroup:EIT\;0\;1\;\;\;\;;
-3 StaticGroup:HHG\;0\;1\;\;\;\;;
-2 StaticGroup:Band gap renormalization\;0\;1\;\;\;\;;
-2 StaticGroup:Screening build-up\;0\;1\;\;\;\;;
-2 StaticGroup:Two Temperatures Model\;0\;1\;\;\;\;;
-2 StaticGroup:Time-resolved relaxation\;0\;1\;\;\;\;;
-2 StaticGroup:Intra-inter dipole m.e.\;0\;1\;\;\;\;;
-2 StaticGroup:Optical Gain\;0\;1\;\;\;\;;
-2 StaticGroup:Circularly polarized light\;0\;1\;\;\;\;;
-2 StaticGroup:Radiative Recombination\;0\;1\;\;\;\;;
-2 StaticGroup:Atomic and molecular systems\;0\;1\;\;\;\;;
-2 StaticGroup:TR ARPES\;0\;1\;\;\;\;;
-2 StaticGroup:Spin Dynamics\;0\;1\;\;\;\;;
-2 StaticGroup:Coherent Oscillations\;0\;1\;\;\;\;;
-1 StaticGroup:TDDFT\;0\;0\;\;\;\;;
-2 StaticGroup:TDPropagation\;0\;1\;\;\;\;;
-3 StaticGroup:numerics\;0\;1\;\;\;\;;
-3 StaticGroup:ModelSystems\;0\;1\;\;\;\;;
-4 StaticGroup:2elSystems\;0\;1\;\;\;\;;
-5 StaticGroup:Performance_Approximations\;0\;1\;\;\;\;;
-5 StaticGroup:Exact\;0\;1\;\;\;\;;
-5 StaticGroup:Exact_vs_Adiabatic\;0\;1\;\;\;\;;
-4 StaticGroup:elGas\;0\;1\;\;\;\;;
-3 StaticGroup:Failures\;0\;1\;\;\;\;;
-3 StaticGroup:BeyondAdiabatic\;0\;1\;\;\;\;;
-3 StaticGroup:Theory\;0\;1\;\;\;\;;
-3 StaticGroup:Review\;0\;1\;\;\;\;;
-3 StaticGroup:DampingOfcollectiveModes\;0\;1\;\;\;\;;
-3 StaticGroup:ChargeTransfer\;0\;1\;\;\;\;;
-3 StaticGroup:BSE kernels\;0\;1\;\;\;\;;
-3 StaticGroup:OEP\;0\;1\;\;\;\;;
-1 StaticGroup:QED\;0\;0\;\;\;\;;
-2 StaticGroup:Lamb\;0\;1\;\;\;\;;
-2 StaticGroup:Casimir\;0\;1\;\;\;\;;
-1 StaticGroup:Total Energy\;0\;1\;\;\;\;;
-1 StaticGroup:Transport\;0\;0\;\;\;\;;
-2 StaticGroup:Graphene & Graphite\;0\;1\;\;\;\;;
-2 StaticGroup:CNT\;0\;1\;\;\;\;;
-2 StaticGroup:Polymers\;0\;1\;\;\;\;;
+@Article{1347-4065-30-7A-L1178,
+  author    = {Mamoru Baba and Yoshitaka Nakamura and Kiyotaka Shibata and Akira Morita},
+  title     = {Photoconduction of Black Phosphorus in the Infrared Region},
+  journal   = {Japanese Journal of Applied Physics},
+  year      = {1991},
+  volume    = {30},
+  number    = {7A},
+  pages     = {L1178},
+  abstract  = {Photoconduction of elemental black phosphorus has been investigated for the first time in the spectral range from 1.5 µm to 5.5 µm, including its fundamental absorption edge. It has been found that black phosphorus shows a broad spectral response from the absorption edge to the visible region and a linear response to the light intensity, which has a fairly response even at room temperature. These results suggest that black phosphorus can be applicable to IR detecting devices. In addition, the direct allowed transition at the absorption edge was confirmed and its temperature dependence was measured.},
+  file      = {:/home/marini/Papers_and_Results/DATABASE/Baba_1991_Jpn._J._Appl._Phys._30_L1178.pdf:PDF},
+  groups    = {Black Phosporus, Coherent Oscillations},
+  timestamp = {2018.09.28},
+  url       = {http://stacks.iop.org/1347-4065/30/i},
 }
+
+@Comment{jabref-meta: databaseType:bibtex;}
